# tarte

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml  requirements.txt
cmake/: tarte-config.cmake.in
docs/: index.md  mathjax.js  refs.bib
docs/theory/Overview/: 00-musical-instruments.md  01-port-hamiltonian.md  02-numerical-methods.md
docs/theory/Physical-components/: 00-webster.md  01-acoustic-radiation.md  02-yielding-walls.md  03-larynx.md
examples/: CMakeLists.txt
examples/Duffing/: CMakeLists.txt  main.cpp
examples/Larynx/: CMakeLists.txt  main.cpp
examples/SingleReed/: CMakeLists.txt  main.cpp
examples/Voice/: CMakeLists.txt  main.cpp
examples/WebsterFDTD/: CMakeLists.txt  main.cpp
examples/WebsterFDTDTiming/: CMakeLists.txt  main.cpp
include/: Bow.h  Duffing.h  articulation.h  body_cover_vf.h  export.h  larynx.h  noise_generator.h  single_reed.h  voice.h  vowels.h  websterFDTD.h
include/utility/: ResultsStorage.h  audiowrite.h  biquad.h  eigen_utility.h  maths.h  smoothing.h  vectormaths.h
include/vocal_folds/: body_cover_pair.h  body_cover_vf.h  vf_pair_model.h  vf_pair_model_example.h
src/: Duffing.cpp  duffing.cpp  larynx.cpp  single_reed.cpp  voice.cpp  websterFDTD.cpp
src/utility/: ResultsStorage.cpp
tests/: CMakeLists.txt  add_test.cpp  biquad_test.cpp  duffing_test.cpp  websterFDTD_test.cpp
